--- a/src/Covariance_Descriptor/Makefile
+++ b/src/Covariance_Descriptor/Makefile
@@ -1,11 +1,11 @@
 all:
-	cd Cython; \
+	cd Descriptor_Cython; \
 	python setup.py build_ext --inplace
-	rm -f -r Cython/build
-	rm -f Cython/Geometric_*.c
-	rm -f Cython/cython_*.c
-	rm -f Cython/Graph*.c
+	rm -f -r Descriptor_Cython/build
+	rm -f Descriptor_Cython/Geometric_*.c
+	rm -f Descriptor_Cython/cython_*.c
+	rm -f Descriptor_Cython/Graph*.c
 clean:
-	rm -f Cython/Geometric*.so
-	rm -f Cython/cython_*.so
-	rm -f Cython/Graph*.so
+	rm -f Descriptor_Cython/Geometric*.so
+	rm -f Descriptor_Cython/cython_*.so
+	rm -f Descriptor_Cython/Graph*.so
